add category from user_id
