# cmd/main.go
@@ -107,6 +107,7 @@ func main() {
 		authorized.POST("/api/products", productController.AddProduct)
 		authorized.POST("/api/categories/attributes", categoryController.AddCategoryAttributes)
 		authorized.GET("/api/categories/:id/attributes", categoryController.GetCategoryAttributesByCategoryID)
+		authorized.GET("/supplier/categories", supplierController.GetSupplierCategoriesHandler)
 	}
 
 	// Маршруты для получения рынков и категорий
